build based on a6ca384

--- a/dev/literate/BWBflutter/index.html
+++ b/dev/literate/BWBflutter/index.html
@@ -34,10 +34,13 @@ spring1 = create_Spring(elementsIDs=[1],nodesSides=[1],ku=ku,kp=kp)
 spring2 = create_Spring(elementsIDs=[3],nodesSides=[2],ku=ku,kp=kp)</code></pre><h3 id="Problem-solution"><a class="docs-heading-anchor" href="#Problem-solution">Problem solution</a><a id="Problem-solution-1"></a><a class="docs-heading-anchor-permalink" href="#Problem-solution" title="Permalink"></a></h3><p>At this point we can sweep the airspeed vector to find the solution at each value.</p><pre><code class="language-julia hljs"># Sweep airspeed range
 for (i,U) in enumerate(URange)
     # The first step of the solution is to trim the aircraft at that flight condition (combination of altitude and airspeed). We leverage the built-in function in AeroBeams to create our model for the trim problem.
-    BWBtrim = create_BWB(aeroSolver=aeroSolver,altitude=h,airspeed=U,δElevIsTrimVariable=true,thrustIsTrimVariable=true)
+    BWBtrim = first(create_BWB(aeroSolver=aeroSolver,altitude=h,airspeed=U,δElevIsTrimVariable=true,thrustIsTrimVariable=true))
+
+    # Let&#39;s set an initial guess for the trim problem as the previously converged solution, if available
+    x0Trim = i == 1 ? zeros(0) : trimProblem[i-1].x
 
     # Now we create and solve the trim problem.
-    trimProblem[i] = create_TrimProblem(model=BWBtrim,systemSolver=NR)
+    trimProblem[i] = create_TrimProblem(model=BWBtrim,systemSolver=NR,x0=x0Trim)
     solve!(trimProblem[i])
 
     # We extract the trim variables at the current airspeed and set them into our pre-allocated arrays. The trimmed angle of attack at the root, `trimAoA[i]`, is not necessary for the flutter analyses, it is merely an output of interest.
@@ -46,13 +49,16 @@ for (i,U) in enumerate(URange)
     trimδ[i] = trimProblem[i].x[end]
 
     # Now let&#39;s create a new model, add springs to it, and update
-    BWBtrimSpringed = create_BWB(aeroSolver=aeroSolver,altitude=h,airspeed=U,δElevIsTrimVariable=true,thrustIsTrimVariable=true)
+    BWBtrimSpringed = first(create_BWB(aeroSolver=aeroSolver,altitude=h,airspeed=U,δElevIsTrimVariable=true,thrustIsTrimVariable=true))
     add_springs_to_beam!(beam=BWBtrimSpringed.beams[2],springs=[spring1])
     add_springs_to_beam!(beam=BWBtrimSpringed.beams[3],springs=[spring2])
     update_model!(BWBtrimSpringed)
 
+    # Let&#39;s set an initial guess for the springed trim problem as the previously converged solution, if available
+    x0TrimSpringed = i == 1 ? zeros(0) : trimProblemSpringed[i-1].x
+
     # Now we create and solve the trim problem for the springed model.
-    trimProblemSpringed[i] = create_TrimProblem(model=BWBtrimSpringed,systemSolver=NR)
+    trimProblemSpringed[i] = create_TrimProblem(model=BWBtrimSpringed,systemSolver=NR,x0=x0TrimSpringed)
     solve!(trimProblemSpringed[i])
 
     # Let&#39;s make sure that the trim outputs of the springed model are very close to the one without springs, that is, the springs did not affect the trim solution. Notice that all ratios are very close to 1.
@@ -62,7 +68,7 @@ for (i,U) in enumerate(URange)
     println(&quot;Trim outputs&#39; ratios springed/nominal: AoA = $(round(trimAoASpringed/trimAoA[i],sigdigits=4)), thrust = $(round(trimThrustSpringed/trimThrust[i],sigdigits=4)), δ = $(round(trimδSpringed/trimδ[i],sigdigits=4))&quot;)
 
     # All the variables needed for the stability analysis are now in place. We create the model for the eigenproblem, using the trim variables found previously with the springed model in order to solve for the stability around that exact state.
-    BWBeigen = create_BWB(aeroSolver=aeroSolver,altitude=h,airspeed=U,δElev=trimδSpringed,thrust=trimThrustSpringed)
+    BWBeigen = first(create_BWB(aeroSolver=aeroSolver,altitude=h,airspeed=U,δElev=trimδSpringed,thrust=trimThrustSpringed))
 
     # Now we create and solve the eigenproblem. Notice that by using `solve_eigen!()`, we skip the step of finding the steady state of the problem, making use of the known trim solution (with the keyword argument `refTrimProblem`). We apply a filter to find only modes whose frequencies are greater than 1 rad/s through the keyword argument `frequencyFilterLimits`
     eigenProblem[i] = create_EigenProblem(model=BWBeigen,nModes=nModes,frequencyFilterLimits=[1,Inf],refTrimProblem=trimProblemSpringed[i])
@@ -73,32 +79,32 @@ for (i,U) in enumerate(URange)
     untrackedDamps[i] = eigenProblem[i].dampingsOscillatory
     untrackedEigenvectors[i] = eigenProblem[i].eigenvectorsOscillatoryCplx
 end</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Trim outputs&#39; ratios springed/nominal: AoA = 0.9995, thrust = 0.9998, δ = 0.9996
-Trim outputs&#39; ratios springed/nominal: AoA = 0.9874, thrust = 0.998, δ = 0.9859
-Trim outputs&#39; ratios springed/nominal: AoA = 0.9992, thrust = 0.9999, δ = 0.9989
-Trim outputs&#39; ratios springed/nominal: AoA = 1.0, thrust = 1.0, δ = 1.0
-Trim outputs&#39; ratios springed/nominal: AoA = 1.0, thrust = 1.0, δ = 1.0
-Trim outputs&#39; ratios springed/nominal: AoA = 1.0, thrust = 1.0, δ = 0.9996
-Trim outputs&#39; ratios springed/nominal: AoA = 1.0, thrust = 1.0, δ = 1.0
-Trim outputs&#39; ratios springed/nominal: AoA = 1.0, thrust = 1.0, δ = 1.0
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9996, thrust = 0.9999, δ = 0.9996
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9997, thrust = 1.0, δ = 0.9997
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9998, thrust = 1.0, δ = 0.9997
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9998, thrust = 1.0, δ = 0.9996
 Trim outputs&#39; ratios springed/nominal: AoA = 0.9999, thrust = 1.0, δ = 1.0
-Trim outputs&#39; ratios springed/nominal: AoA = 0.997, thrust = 1.0, δ = 1.0
 Trim outputs&#39; ratios springed/nominal: AoA = 1.0, thrust = 1.0, δ = 1.0
 Trim outputs&#39; ratios springed/nominal: AoA = 1.0, thrust = 1.0, δ = 1.0
 Trim outputs&#39; ratios springed/nominal: AoA = 1.0, thrust = 1.0, δ = 1.0
-Trim outputs&#39; ratios springed/nominal: AoA = 1.0, thrust = 1.0, δ = 1.0
-Trim outputs&#39; ratios springed/nominal: AoA = 1.0, thrust = 1.0, δ = 1.0
-Trim outputs&#39; ratios springed/nominal: AoA = 1.0, thrust = 1.0, δ = 1.0
-Trim outputs&#39; ratios springed/nominal: AoA = 1.0, thrust = 1.0, δ = 1.0
-Trim outputs&#39; ratios springed/nominal: AoA = 1.0, thrust = 1.0, δ = 1.0
-Trim outputs&#39; ratios springed/nominal: AoA = 1.0, thrust = 1.0, δ = 1.0
-Trim outputs&#39; ratios springed/nominal: AoA = 1.0, thrust = 1.0, δ = 1.0
-Trim outputs&#39; ratios springed/nominal: AoA = 1.0, thrust = 1.0, δ = 1.0
-Trim outputs&#39; ratios springed/nominal: AoA = 0.9999, thrust = 1.0, δ = 1.0
-Trim outputs&#39; ratios springed/nominal: AoA = 0.9999, thrust = 1.0, δ = 1.0
-Trim outputs&#39; ratios springed/nominal: AoA = 0.9999, thrust = 1.0, δ = 1.0
+Trim outputs&#39; ratios springed/nominal: AoA = 1.013, thrust = 1.0, δ = 1.0
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9995, thrust = 1.0, δ = 1.0
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9997, thrust = 1.0, δ = 1.0
 Trim outputs&#39; ratios springed/nominal: AoA = 0.9998, thrust = 1.0, δ = 1.0
 Trim outputs&#39; ratios springed/nominal: AoA = 0.9998, thrust = 1.0, δ = 1.0
-Trim outputs&#39; ratios springed/nominal: AoA = 0.9997, thrust = 1.0, δ = 1.0</code></pre><h3 id="Post-processing"><a class="docs-heading-anchor" href="#Post-processing">Post-processing</a><a id="Post-processing-1"></a><a class="docs-heading-anchor-permalink" href="#Post-processing" title="Permalink"></a></h3><p>We can use the AeroBeams built-in function <a href="../../publicAPI/#AeroBeams.mode_tracking_hungarian"><code>mode_tracking_hungarian</code></a> to enhance the chances of correctly tracking the frequencies and dampings of each mode</p><pre><code class="language-julia hljs"># Mode tracking
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9999, thrust = 1.0, δ = 1.0
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9999, thrust = 1.0, δ = 1.0
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9999, thrust = 1.0, δ = 1.0
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9999, thrust = 1.0, δ = 1.0
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9999, thrust = 1.0, δ = 1.0
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9999, thrust = 1.0, δ = 1.0
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9999, thrust = 1.0, δ = 1.0
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9999, thrust = 1.0, δ = 1.0
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9999, thrust = 1.0, δ = 1.0
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9999, thrust = 1.0, δ = 1.0
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9999, thrust = 1.0, δ = 1.0
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9999, thrust = 1.0, δ = 1.0
+Trim outputs&#39; ratios springed/nominal: AoA = 0.9998, thrust = 1.0, δ = 1.0</code></pre><h3 id="Post-processing"><a class="docs-heading-anchor" href="#Post-processing">Post-processing</a><a id="Post-processing-1"></a><a class="docs-heading-anchor-permalink" href="#Post-processing" title="Permalink"></a></h3><p>We can use the AeroBeams built-in function <a href="../../publicAPI/#AeroBeams.mode_tracking_hungarian"><code>mode_tracking_hungarian</code></a> to enhance the chances of correctly tracking the frequencies and dampings of each mode</p><pre><code class="language-julia hljs"># Mode tracking
 freqs,damps,_,matchedModes = mode_tracking_hungarian(URange,untrackedFreqs,untrackedDamps,untrackedEigenvectors)
 
 # Separate frequencies and damping ratios by mode
@@ -169,4 +175,4 @@ for mode in 1:nModes
 plot!(URange, modeDampings[mode]./modeFrequencies[mode], c=modeColors[mode], shape=:circle, ms=4, msw=0, label=false)
 end
 plt5 = plot(plt51,plt52, layout=(2,1))</code></pre><p><img src="../BWBflutter_rootlocus.svg" alt/> <img src="../BWBflutter_Vgf.svg" alt/></p><p>Finally, we may visualize the mode shapes of the last eigenproblem (at highest airspeed), making use of the <a href="../../publicAPI/#AeroBeams.plot_mode_shapes"><code>plot_mode_shapes</code></a> function with the appropriate inputs. Modes 1 and 2 seem to respectively be lateral-directional and longitudinal flight dynamic modes, whereas the others are structural.</p><pre><code class="language-julia hljs"># Plot mode shapes
-modesPlot = plot_mode_shapes(eigenProblem[end],scale=2,view=(45,30),element2centralize=11,legendPos=:top,modalColorScheme=:rainbow)</code></pre><p><img src="../BWBflutter_modeShapes.svg" alt/></p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../heliosTrim/">« Trimming a flying-wing HALE</a><a class="docs-footer-nextpage" href="../conventionalHALECheckedPitchManeuver/">Pitch maneuver of a HALE aircraft »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.15.0 on <span class="colophon-date" title="Friday 31 October 2025 00:59">Friday 31 October 2025</span>. Using Julia version 1.9.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+modesPlot = plot_mode_shapes(eigenProblem[end],scale=2,view=(45,30),element2centralize=11,legendPos=:top,modalColorScheme=:rainbow)</code></pre><p><img src="../BWBflutter_modeShapes.svg" alt/></p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../heliosTrim/">« Trimming a flying-wing HALE</a><a class="docs-footer-nextpage" href="../conventionalHALECheckedPitchManeuver/">Pitch maneuver of a HALE aircraft »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.15.0 on <span class="colophon-date" title="Friday 7 November 2025 16:43">Friday 7 November 2025</span>. Using Julia version 1.9.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
